docs:html add-foto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<div claas="foto">
+  <img src="/rsschool-cv/image/17.05.1995 NIHAD FARAJOV.jpeg" alt="">
+</div>
 <body>
   
 </body>
