--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="assets/favicon.ico">
+  <title>cv</title>
 </head>
-<div claas="foto">
-  <img src="/rsschool-cv/image/17.05.1995 NIHAD FARAJOV.jpeg" alt="">
-</div>
 <body>
-  
+
 </body>
 </html>
